--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: "./build"
-          server-dir: "/daniel.daeva.ro/webprofile"
+          local-dir: "./build/"
+          server-dir: "/daniel.daeva.ro/webprofile/"
 
       - name: Deploy backend folder to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -33,5 +33,5 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: "./backend"
-          server-dir: "/daniel.daeva.ro/webprofile/backend"
+          local-dir: "./backend/"
+          server-dir: "/daniel.daeva.ro/webprofile/backend/"
